--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <!-- dependencies versions -->
         <dep.version.commons-ip2>2.0.0-alpha1</dep.version.commons-ip2>
         <dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
-        <dep.version.jackson>2.9.9</dep.version.jackson>
+        <dep.version.jackson>2.12.3</dep.version.jackson>
         <dep.version.slf4j>2.0.0-alpha1</dep.version.slf4j>
         <dep.version.logback>1.3.0-alpha5</dep.version.logback>
         <dep.version.richtextfx>0.9.3</dep.version.richtextfx>
@@ -564,6 +564,13 @@
 
         <!-- JavaFX -->
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.1.0</version>
@@ -661,7 +668,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
