Changed slf4j and logback plugin versions

--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <dep.version.commons-ip2>2.0.0-alpha1</dep.version.commons-ip2>
         <dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
         <dep.version.jackson>2.12.3</dep.version.jackson>
-        <dep.version.slf4j>2.0.0-alpha1</dep.version.slf4j>
-        <dep.version.logback>1.3.0-alpha5</dep.version.logback>
+        <dep.version.slf4j>1.7.30</dep.version.slf4j>
+        <dep.version.logback>0.9.30</dep.version.logback>
         <dep.version.richtextfx>0.9.3</dep.version.richtextfx>
         <dep.version.saxon>9.7.0-15</dep.version.saxon>
         <dep.version.jcabi>0.18.1</dep.version.jcabi>
