Updated Commons-ip version from 2.0.0-alpha1 to 2.0.0-alpha2; changed black folder to archive icon; #352;#332

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -102,7 +102,7 @@ levels.icon.item = \uF15B
 
 levels.icon.internal.default = \uF15B
 levels.icon.internal.itemLevel = \uF15B
-levels.icon.internal.fileLevel = \uF07B
+levels.icon.internal.fileLevel = \uF187
 levels.icon.internal.aggregationLevel = \uF0C9
 levels.icon.internal.topLevel = \uF1AD
 
