Added creation of mandatory agent

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -25,6 +25,8 @@ CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
 CreationModalPreparation.sipFormat=SIP format
+CreationModalPreparation.submitterAgentName = Submitter Name
+CreationModalPreparation.submitterAgentID = Submitter ID 
 CreationModalProcessing.action=Status
 CreationModalProcessing.currentSip=Current SIP
 CreationModalProcessing.errors=\ errors
