--- a/pom.xml
+++ b/pom.xml
@@ -369,9 +369,9 @@
                                     <name>RODA-in${jar.id}</name>
                                     <displayName>RODA-in${jar.id}</displayName>
                                     <bundleJre>true</bundleJre>
+                                    <customizedJre>false</customizedJre>
                                     <generateInstaller>true</generateInstaller>
                                     <platform>linux</platform>
-                                    <jdkPath>jdk/linux</jdkPath>
                                     <runnableJar>target/rodain-app${jar.id}-${project.version}_OtherOS.jar</runnableJar>
                                     <additionalResources>
                                         <additionalResource>src/main/resources</additionalResource>
@@ -396,7 +396,7 @@
                     <plugin>
                         <groupId>io.github.fvarrui</groupId>
                         <artifactId>javapackager</artifactId>
-                        <version>1.5.1</version>
+                        <version>1.6.2</version>
                         <executions>
                             <execution>
                                 <id>windows-bundler</id>
@@ -411,10 +411,10 @@
                                     <name>RODA-in${jar.id}</name>
                                     <displayName>RODA-in${jar.id}</displayName>
                                     <bundleJre>true</bundleJre>
+                                    <customizedJre>false</customizedJre>
                                     <generateInstaller>true</generateInstaller>
                                     <platform>windows</platform>
                                     <createZipball>true</createZipball>
-                                    <jdkPath>jdk/windows</jdkPath>
                                     <runnableJar>target/rodain-app${jar.id}-${project.version}_OtherOS.jar</runnableJar>
                                     <additionalResources>
                                         <additionalResource>src/main/resources</additionalResource>
@@ -451,7 +451,7 @@
                     <plugin>
                         <groupId>io.github.fvarrui</groupId>
                         <artifactId>javapackager</artifactId>
-                        <version>1.5.1</version>
+                        <version>1.6.2</version>
                         <executions>
                             <execution>
                                 <id>mac-bundler</id>
@@ -465,9 +465,9 @@
                                     <name>RODA-in${jar.id}</name>
                                     <displayName>RODA-in${jar.id}</displayName>
                                     <bundleJre>true</bundleJre>
+                                    <customizedJre>false</customizedJre>
                                     <generateInstaller>true</generateInstaller>
                                     <platform>mac</platform>
-                                    <jdkPath>jdk/mac/Contents/Home</jdkPath>
                                     <runnableJar>target/rodain-app${jar.id}-${project.version}_OtherOS.jar</runnableJar>
                                     <additionalResources>
                                         <additionalResource>src/main/resources</additionalResource>
