--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.roda</groupId>
     <artifactId>rodain</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2/version>
 
     <prerequisites>
         <maven>3.0</maven>
