SIP-S support; initialized URI configuration

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -156,3 +156,8 @@ metsheader.EARK.field.agents.attr.type.label = i18n.metsheader.EARK.field.agents
 metsheader.EARK.field.agents.attr.type.description = i18n.metsheader.EARK.field.agents.attr.type.description
 metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.agents.attr.othertype.label
 metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
+
+# Shallow SIP Properties
+#shallowSIP.shared.basePath = home1/shared, home2/shared
+#shallowSIP.shared.host = host1,host2
+#shallowSIP.shared.protocoll = protocol1, protocol2
