SIP-S support for RODA-in

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -158,6 +158,6 @@ metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.a
 metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
 
 # Shallow SIP Properties
-#shallowSIP.shared.basePath = home1/shared, home2/shared
-#shallowSIP.shared.host = host1,host2
-#shallowSIP.shared.protocoll = protocol1, protocol2
+#shallowSIP.basePath = home1/shared, home2/shared
+#shallowSIP.host = host1,host2
+#shallowSIP.protocol = protocol1, protocol2
