Creation of URI for SIP-S by configuration

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -158,6 +158,18 @@ metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.a
 metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
 
 # Shallow SIP Properties
-#shallowSIP.basePath = home1/shared, home2/shared
-#shallowSIP.host = host1,host2
-#shallowSIP.protocol = protocol1, protocol2
+
+reference.transformer.list[] = downloads
+#reference.transformer.list[] = home2
+
+# Result smb://home1/relativePath
+#reference.transformer.home1.basepath = C:/home1
+#reference.transformer.home1.host = home1
+#reference.transformer.home1.protocol = smb
+
+# Result file://home2/relativePath
+reference.transformer.downloads.targetPath = data
+reference.transformer.downloads.basepath = /home/jgomes/Downloads
+reference.transformer.downloads.port =
+reference.transformer.downloads.host = Downloads
+reference.transformer.downloads.protocol = file
