--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -159,17 +159,29 @@ metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.f
 
 # Shallow SIP Properties
 
+# List configuration reference.transformer.list[] and the value
 reference.transformer.list[] = downloads
-#reference.transformer.list[] = home2
+reference.transformer.list[] = desktop
+reference.transformer.list[] = github
 
-# Result smb://home1/relativePath
-#reference.transformer.home1.basepath = C:/home1
-#reference.transformer.home1.host = home1
-#reference.transformer.home1.protocol = smb
+# To define the URI parts need to add :
+# reference.transformer.{list value}.basepath (required)
+# reference.transformer.{list value}.targetPath (optional)
+# reference.transformer.{list value}.port (optional)
+# reference.transformer.{list value}.host (optional)
+# reference.transformer.{list value}.protocol (required)
 
-# Result file://home2/relativePath
 reference.transformer.downloads.targetPath = data
 reference.transformer.downloads.basepath = /home/jgomes/Downloads
 reference.transformer.downloads.port =
 reference.transformer.downloads.host = Downloads
 reference.transformer.downloads.protocol = file
+
+reference.transformer.github.basepath = /home/jgomes/Github
+reference.transformer.github.protocol = file
+
+reference.transformer.desktop.basepath = /home/jgomes/Desktop
+reference.transformer.desktop.targetPath = u/0/folders
+reference.transformer.desktop.protocol = https
+reference.transformer.desktop.host = drive.google.com
+
