--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -171,11 +171,10 @@ reference.transformer.list[] = github
 # reference.transformer.{list value}.host (optional)
 # reference.transformer.{list value}.protocol (required)
 
-reference.transformer.downloads.targetPath = data
+reference.transformer.downloads.targetPath = home/jgomes/Downloads/data
 reference.transformer.downloads.basepath = /home/jgomes/Downloads
-reference.transformer.downloads.port =
-reference.transformer.downloads.host = Downloads
 reference.transformer.downloads.protocol = file
+reference.transformer.downloads.host = localhost
 
 reference.transformer.github.basepath = /home/jgomes/Github
 reference.transformer.github.protocol = file
