Added export icons to possible shallow files

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -168,4 +168,8 @@ metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.f
 # reference.transformer.{list value}.host (optional)
 # reference.transformer.{list value}.protocol (required)
 
+reference.transformer.list[] = downloads
+reference.transformer.downloads.basepath = /home/jgomes/Downloads/
+reference.transformer.downloads.protocol = file
+
 
