--- a/pom.xml
+++ b/pom.xml
@@ -610,6 +610,11 @@
             <version>11</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.1.3</version>
+        </dependency>
         <!-- Tests -->
         <dependency>
             <groupId>junit</groupId>
