Fixed createUriPath method

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -171,5 +171,6 @@ metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.f
 reference.transformer.list[] = downloads
 reference.transformer.downloads.basepath = /home/jgomes/Downloads/
 reference.transformer.downloads.protocol = file
+reference.transformer.downloads.targetPath = /home/jgomes/Downloads/
 
 
