--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -29,7 +29,7 @@ help.files = metadata_pt.png
 #########################################################
 # Active SIP types                                      #
 #########################################################
-activeSipTypes=EARK,EARK2,BAGIT,SIPS
+activeSipTypes=EARK,EARK2,BAGIT,EARK2S
 
 #########################################################
 # Metadata templates                                    #
