--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -110,7 +110,7 @@ levels.icon.internal.topLevel = \uF1AD
 # SIP Creation                                          #
 #########################################################
 sipPreviewCreator.createSip.alwaysJumpFolder = false
-creationModalPreparation.defaultSipType = E-ARK
+creationModalPreparation.defaultSipType = E-ARK2
 
 #########################################################
 # METS Header form                                      #
