--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -26,7 +26,9 @@ CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
 CreationModalPreparation.sipFormat=SIP format
 CreationModalPreparation.submitterAgentName = Submitter Name
-CreationModalPreparation.submitterAgentID = Submitter ID 
+CreationModalPreparation.submitterAgentNameTooltip = Name of the organisation submitting the package
+CreationModalPreparation.submitterAgentID = Submitter ID
+CreationModalPreparation.submitterAgentIDTooltip = Unique identification code for the submitter agent
 CreationModalProcessing.action=Status
 CreationModalProcessing.currentSip=Current SIP
 CreationModalProcessing.errors=\ errors
@@ -329,11 +331,11 @@ i18n.metsheader.HUNGARIAN.type.agent = Agents
 
 i18n.metsheader.HUNGARIAN.field.recordStatus.title = Status
 i18n.metsheader.HUNGARIAN.field.recordStatus.label = Status
-i18n.metsheader.HUNGARIAN.field.recordStatus.description = Package status can be "Új csomag" represented as "NEW", "Helyettesítő csomag" represented as "REPLACEMENT", "Teszt csomag", represented as "TEST".
+i18n.metsheader.HUNGARIAN.field.recordStatus.description = Package status can be "\u00DAj csomag" represented as "NEW", "Helyettes\u00EDt\u0151 csomag" represented as "REPLACEMENT", "Teszt csomag", represented as "TEST".
 
 i18n.metsheader.HUNGARIAN.field.deliveryType.title = Transfer type
 i18n.metsheader.HUNGARIAN.field.deliveryType.label = Transfer type
-i18n.metsheader.HUNGARIAN.field.deliveryType.description = Type of the transfer can be certified ERMS represented as "TANÚSÍTOTT IKTATÁS"; ERMS, represented as "STRUKTURÁLT IKTATÁS"; business system with record level metadata, represented as "STRUKTURÁLT IRATNYILVÁNTARTÁS"; high level metadata, represented as "STRUKTURÁLATLAN".
+i18n.metsheader.HUNGARIAN.field.deliveryType.description = Type of the transfer can be certified ERMS represented as "TAN\u00DAS\u00CDTOTT IKTAT\u00C1S"; ERMS, represented as "STRUKTUR\u00C1LT IKTAT\u00C1S"; business system with record level metadata, represented as "STRUKTUR\u00C1LT IRATNYILV\u00C1NTART\u00C1S"; high level metadata, represented as "STRUKTUR\u00C1LATLAN".
 
 i18n.metsheader.HUNGARIAN.field.deliverySpecification.title = Transfer specification document
 i18n.metsheader.HUNGARIAN.field.deliverySpecification.label = Transfer specification document
@@ -369,7 +371,7 @@ i18n.metsheader.HUNGARIAN.field.accessRestrict.description = Flag to indicate re
 
 i18n.metsheader.HUNGARIAN.field.appraisal.title = Deletable
 i18n.metsheader.HUNGARIAN.field.appraisal.label = Deletable
-i18n.metsheader.HUNGARIAN.field.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be\: "Selejtezhető", "Nem selejtezhető".
+i18n.metsheader.HUNGARIAN.field.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be\: "Selejtezhet\u0151", "Nem selejtezhet\u0151".
 
 i18n.metsheader.HUNGARIAN.field.agent1.title = Record creator
 i18n.metsheader.HUNGARIAN.field.agent1.attr.name.label = Record creator
