--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.roda</groupId>
@@ -30,7 +29,7 @@
         <plug.version.resources>3.0.2</plug.version.resources>
         <plug.version.site>3.6</plug.version.site>
         <!-- dependencies versions -->
-        <dep.version.commons-ip2>2.2.0</dep.version.commons-ip2>
+        <dep.version.commons-ip2>2.3.3</dep.version.commons-ip2>
         <dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
         <dep.version.jackson>2.12.6.1</dep.version.jackson>
         <dep.version.slf4j>1.7.30</dep.version.slf4j>
